--- a/.github/workflow/work.yaml
+++ b/.github/workflow/work.yaml
@@ -64,8 +64,8 @@ jobs:
           tar -czf ios_build.tar.gz ios
 
         #9 Upload Artifacts
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
           name: Releases
           path: |
